[metadata]
name = P4OO.py
version = 0.0.2
author = David L. Armstrong
description = P4OO.py provides a layer of first class objects on top of P4Python.
long_description = file: README.md
lond_description_content_type = text/markdown
url = https://github.com/daversomethingsomething/P4OO.py
project_urls = 
    Bug Tracker = https://github.com/daversomethingsomething/P4OO.py/issues
license = Artistic-2.0
license_files = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    License :: Artistic-2.0
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7
install_requires =
    p4python

[options.packages.find]
where = src
